--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "epii-render",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "render for epii web",
   "main": "index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "test": "nyc --reporter=lcov mocha test/index.js",
+    "lcov": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -32,12 +33,17 @@
     "chalk": "^2.0.1",
     "expose-loader": "^0.7.3",
     "glob": "^7.1.2",
-    "loader-utils": "^1.1.0",
     "postcss": "^6.0.6",
     "precss": "^2.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "settle-loader": "^0.1.0",
     "shelljs": "^0.7.7",
     "webpack": "^3.1.0"
+  },
+  "devDependencies": {
+    "coveralls": "^2.13.1",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.3"
   }
 }
