--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "epii-render",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "render for epii web",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=lcov mocha test/index.js",
+    "test": "nyc --reporter=lcov mocha test/index.js --exit",
     "lcov": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -25,25 +25,25 @@
   },
   "homepage": "https://github.com/sartrey/epii-node-render#readme",
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "chalk": "^2.0.1",
-    "expose-loader": "^0.7.3",
+    "chalk": "^2.3.0",
+    "expose-loader": "^0.7.4",
     "glob": "^7.1.2",
-    "postcss": "^6.0.6",
+    "postcss": "^6.0.14",
     "precss": "^2.0.0",
-    "react": "^15.6.0",
-    "react-dom": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "settle-loader": "^0.1.0",
     "shelljs": "^0.7.7",
-    "webpack": "^3.3.0"
+    "webpack": "^3.9.1"
   },
   "devDependencies": {
-    "coveralls": "^2.13.1",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.3"
+    "coveralls": "^3.0.0",
+    "mocha": "^4.0.1",
+    "nyc": "^11.3.0"
   }
 }
