--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epii-render",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "render for epii web",
   "main": "index.js",
   "scripts": {
@@ -27,8 +27,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.3.0",
     "expose-loader": "^0.7.4",
