--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,15 @@
 {
   "extends": "airbnb-base",
+  "parser": "babel-eslint",
   "rules": {
     "semi": "off",
     "curly": "off",
+    "no-var": "off",
     "no-console": "off",
     "no-bitwise": "off",
+    "func-names": "off",
     "no-plusplus": "off",
+    "vars-on-top": "off",
     "comma-dangle": [2, "never"],
     "global-require": "off",
     "space-unary-ops": [2, { "words": true, "nonwords": true }],
@@ -15,6 +19,7 @@
     "no-unused-expressions": "off",
     "array-bracket-spacing": "off",
     "function-paren-newline": "off",
-    "computed-property-spacing": "off"
+    "computed-property-spacing": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
