--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "epii-render",
-  "version": "0.7.1",
+  "name": "@epiijs/render",
+  "version": "0.8.0",
   "description": "render for epii web",
   "main": "source/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sartrey/epii-node-render.git"
+    "url": "git+https://github.com/epiijs/epii-render.git"
   },
   "keywords": [
     "epii",
@@ -22,12 +22,12 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sartrey/epii-node-render/issues"
+    "url": "https://github.com/epiijs/epii-render/issues"
   },
-  "homepage": "https://github.com/sartrey/epii-node-render#readme",
+  "homepage": "https://github.com/epiijs/epii-render#readme",
   "dependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "chokidar": "^2.1.6",
@@ -46,7 +46,7 @@
     "react-dom": "^16.8.6",
     "settle-loader": "^0.2.1",
     "shelljs": "^0.7.7",
-    "webpack": "^4.31.0"
+    "webpack": "^4.32.2"
   },
   "optionalDependencies": {
     "chalk": "^1.1.3"
