--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epiijs/render",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "render for epii web",
   "main": "source/index.js",
   "scripts": {
@@ -30,22 +30,25 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "chokidar": "^2.1.6",
+    "chokidar": "^3.0.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "expose-loader": "^0.7.5",
     "glob": "^7.1.4",
+    "mini-css-extract-plugin": "^0.7.0",
     "postcss": "^7.0.16",
-    "precss": "^2.0.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "settle-loader": "^0.2.1",
-    "shelljs": "^0.7.7",
+    "shelljs": "^0.8.3",
     "webpack": "^4.32.2"
   },
   "optionalDependencies": {
