--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epiijs/render",
-  "version": "0.10.4",
+  "version": "0.10.5",
   "description": "render for epii web",
   "main": "source/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "react"
   ],
   "contributors": [
-    "Sartrey Lee <sartrey@163.com> (http://sartrey.cn/)"
+    "Sartrey Lee <sartrey@163.com> (https://sartrey.cn/)"
   ],
   "license": "MIT",
   "bugs": {
@@ -31,7 +31,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "chokidar": "^3.3.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
@@ -57,6 +57,6 @@
   "devDependencies": {
     "coveralls": "^3.0.11",
     "mocha": "^7.1.1",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.1"
   }
 }
