--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epiijs/render",
-  "version": "0.10.11",
+  "version": "0.11.0",
   "description": "render for epii web",
   "main": "source/index.js",
   "scripts": {
@@ -44,6 +44,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss": "^7.0.27",
     "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
     "precss": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
