--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,16 @@
-start.js
-example
-test
 tmp
 npm-debug.log
 coverage
 lcov.info
-.DS_Store
-.vscode
+docs
+test
+example
+
 .nyc_output
-.travis.yml
 .eslintignore
 .eslintrc.json
 .gitignore
+.travis.yml
+
+README.md
+ROADMAP.md
