--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epiijs/render",
-  "version": "0.15.1",
+  "version": "1.0.0",
   "description": "A typical recipe for building web application using React + SASS.",
   "main": "source/index.js",
   "scripts": {
@@ -29,32 +29,32 @@
   },
   "homepage": "https://github.com/epiijs/epii-render#readme",
   "dependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.0",
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "chokidar": "^3.4.2",
-    "css-loader": "^4.3.0",
-    "eslint": "^7.9.0",
+    "chokidar": "^3.4.3",
+    "css-loader": "^5.0.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "expose-loader": "^1.0.0",
+    "eslint-plugin-react": "^7.21.4",
+    "expose-loader": "^1.0.1",
     "glob": "^7.1.4",
-    "mini-css-extract-plugin": "^0.11.2",
-    "postcss": "^8.0.5",
-    "postcss-loader": "^4.0.2",
+    "launch-loader": "^1.0.2",
+    "mini-css-extract-plugin": "^1.0.0",
+    "postcss": "^8.1.1",
+    "postcss-loader": "^4.0.4",
     "postcss-url": "^8.0.0",
     "precss": "^4.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "settle-loader": "^0.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "shelljs": "^0.8.4",
-    "webpack": "^4.44.2"
+    "webpack": "^5.1.0"
   },
   "optionalDependencies": {
     "chalk": "^1.1.3"
